test/expected/cast_pfi_i-cknr.out
cast p into pointer to function (x as int) returning int
                                 ^
34: error: function prototypes not supported until C89
